--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ url = https://github.com/Qing-LAB/PySciBench
 license_file = LICENSE
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: BSD 2-Clause License
     Operating System :: OS Independent
 
 [options]
